--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.12",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/react-redux": "^7.1.25",
+    "@types/uuid": "^9.0.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "immer": "^9.0.19",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
   }
 }
